adding a bunch of climate indices

--- a/notebooks/SL_Data_Wrangling.ipynb
+++ b/notebooks/SL_Data_Wrangling.ipynb
@@ -1928,71 +1928,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download ENSO/ Oceanic Niño Index (ONI)\n",
+    "def read_psl_url(url):\n",
+    "    response = requests.get(url)\n",
+    "    data = response.text\n",
+    "    # Split the data into lines\n",
+    "    lines = data.strip().split('\\n')\n",
+    "    # Collect data lines until we encounter -9999\n",
+    "    data_lines = []\n",
+    "    for line in lines[1:]:  # Skip the first line if it's a header\n",
+    "        stripped_line = line.strip()\n",
+    "        if stripped_line == '':\n",
+    "            continue  # Skip empty lines\n",
+    "        # Detect possible footer lines (either starting with -99.9, -9999, or a textual footer)\n",
+    "        if stripped_line.startswith('-99.9') or stripped_line.startswith('-99.99') or stripped_line.startswith('-9999') or any(char.isalpha() for char in stripped_line):\n",
+    "            break  # Stop processing when footer is encountered\n",
+    "        # Add valid data lines to the list\n",
+    "        data_lines.append(line)\n",
+    "    # Combine data lines into a single string\n",
+    "    data_str = '\\n'.join(data_lines)\n",
+    "    data_io = io.StringIO(data_str)\n",
+    "    return data_io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_psl_format(csvfile, varName):\n",
+    "    df = pd.read_csv(csvfile, sep='\\s+', skiprows=1, skipfooter = 0,header=None, engine='python')\n",
+    "    CI = df.melt(id_vars=0, var_name='Month', value_name=varName)\n",
+    "    #Replace placeholder values with NaN\n",
+    "    CI.replace([-9.99, -9999, -9999.000, -999.99,-99.90,-99.99], np.nan, inplace=True)\n",
+    "    # Drop rows with NaN values\n",
+    "    CI = CI.dropna(subset=[varName])\n",
+    "    CI['time'] = pd.to_datetime({'year': CI[0], 'month': CI['Month'], 'day': 1})\n",
+    "    # Sort by 'time'\n",
+    "    CI = CI.sort_values('time').reset_index(drop=True)\n",
+    "    CI = CI[['time', varName]]\n",
     "\n",
-    "url = 'https://psl.noaa.gov/data/correlation/oni.data'\n",
-    "\n",
-    "# parse the data into a timeseries\n",
-    "oni = pd.read_csv(url, sep= '\\s+', skiprows=1, header=None, names=['Year', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12'])\n",
-    "\n",
-    "# take only first 74 rows\n",
-    "oni = oni.head(74)\n",
-    "\n",
-    "# Convert the 'Year' column to integer type\n",
-    "oni['Year'] = oni['Year'].astype(int)\n",
-    "\n",
-    "# melt the dataframe to long format\n",
-    "oni = oni.melt(id_vars='Year', var_name='Month', value_name='ONI')\n",
-    "\n",
-    "# Create a datetime column from the 'Year' and 'Month' columns, where month is the middle of the month\n",
-    "oni['Month'] = oni['Month'].astype(int)\n",
-    "oni['Day'] = 15\n",
-    "oni['Date'] = pd.to_datetime(oni[['Year', 'Month', 'Day']])\n",
-    "\n",
-    "# Set the 'Date' column as the index\n",
-    "oni = oni.set_index('Date')\n",
-    "\n",
-    "# Drop the 'Year', 'Month', and 'Day' columns\n",
-    "oni = oni.drop(columns=['Year', 'Month', 'Day'])\n",
-    "\n",
-    "# make sure ONI is a float\n",
-    "oni['ONI'] = oni['ONI'].astype(float)\n",
-    "\n",
-    "\n",
-    "# sort the index by date\n",
-    "oni = oni.sort_index()\n",
-    "\n",
-    "# First classify the ONI values as El Niño, La Niña, or Neutral\n",
-    "oni['ONI_event'] = oni['ONI'].apply(lambda x: 1 if x >= 0.5 else (-1 if x <= -0.5 else 0))\n",
-    "\n",
-    "\n",
-    "#for all ONI_events, sum the ONI_event for the next 5 months. If the sum is 5, it is an El Niño event, if it is -5, it is a La Niña event\n",
-    "oni['ONI_event_duration_start'] = oni['ONI_event'].rolling(5).sum().shift(-4)\n",
-    "\n",
-    "# Note this method will leave NaNs at the end of the series, but that's okay, because we are only interested in the start of the event\n",
-    " \n",
-    "# find the start of the event, defined as the first month with -5 in ONI_event_duration_start\n",
-    "oni['La Nina'] = oni['ONI_event_duration_start'].apply(lambda x: 1 if x == -5 else 0)\n",
-    "# get positive zero crossings\n",
-    "oni['La Nina'] = oni['La Nina'].where(oni['La Nina'] == 1).ffill(limit=4)\n",
-    "\n",
-    "#do the same for El Nino\n",
-    "oni['El Nino'] = oni['ONI_event_duration_start'].apply(lambda x: 1 if x == 5 else 0)\n",
-    "# get positive zero crossings\n",
-    "oni['El Nino'] = oni['El Nino'].where(oni['El Nino'] == 1).ffill(limit=4)\n",
-    "\n",
-    "#change the NaNs to 0 and turn Nino and Nina into boolean\n",
-    "oni['El Nino'] = oni['El Nino'].fillna(0).astype(bool)\n",
-    "oni['La Nina'] = oni['La Nina'].fillna(0).astype(bool)\n",
-    "\n",
-    "#remove the intermediate columns\n",
-    "oni = oni.drop(columns=['ONI_event', 'ONI_event_duration_start'])\n",
-    "\n",
-    "oni\n"
+    "    return CI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_ncei_format(csvfile, varName):\n",
+    "    df = pd.read_csv(csvfile, sep='\\s+', skiprows=0, skipfooter = 0,header=1, engine='python')\n",
+    "    ClimateIndex = df.melt(id_vars='Year', var_name='Month', value_name=varName)\n",
+    "    ClimateIndex['Month'] = ClimateIndex['Month'].map(month_mapping)\n",
+    "    # Replace placeholder values with NaN\n",
+    "    ClimateIndex.replace(99.99, np.nan, inplace=True)\n",
+    "    # Drop rows with NaN values\n",
+    "    ClimateIndex = ClimateIndex.dropna(subset=[varName])\n",
+    "    ClimateIndex['time'] = pd.to_datetime({'year': ClimateIndex['Year'], 'month': ClimateIndex['Month'], 'day': 1})\n",
+    "    # Sort by 'time'\n",
+    "    ClimateIndex = ClimateIndex.sort_values('time').reset_index(drop=True)\n",
+    "    ClimateIndex = ClimateIndex[['time', varName]]\n",
+    "    return ClimateIndex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month_mapping = {\n",
+    "    'Jan': 1, 'Feb': 2, 'Mar': 3, 'Apr': 4,\n",
+    "    'May': 5, 'Jun': 6, 'Jul': 7, 'Aug': 8,\n",
+    "    'Sep': 9, 'Oct': 10, 'Nov':11, 'Dec':12\n",
+    "}"
    ]
   },
   {
@@ -2040,35 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save to the data directory\n",
-    "oni.to_csv(data_dir / 'oni.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read the PMM data from the NOAA website\n",
-    "url = 'https://psl.noaa.gov/tmp/gcos_wgsp/data.137.110.216.75.254.20.11.4.txt'\n",
-    "\n",
-    "# data is in date value format, with no header and a space delimiter\n",
-    "# read it in with pandas\n",
-    "\n",
-    "pmm = pd.read_csv(url, sep= '\\s+', header=None, names=['Date', 'PMM'])\n",
-    "\n",
-    "# remove rows with missing values\n",
-    "pmm = pmm.dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2092,19 +2078,202 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pacific Meridional Mode"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Apply the conversion function to the 'Date' column\n",
-    "pmm['Date'] = pmm['Date'].apply(convert_fraction_to_date)\n",
+    "def retrieve_pmm(yearStart='1950',yearEnd='2024',data_dir=data_dir):\n",
     "\n",
-    "# save to the data directory without the index\n",
+    "    plottingUrlBase = 'https://psl.noaa.gov/cgi-bin/data/climateindices/corr.pl?'\n",
+    "    plotSpecs1 = 'tstype1=45&custname1=&custtitle1=&tstype2=0&custname2=&custtitle2=&'\n",
+    "    timeRange = 'year1='+ yearStart + '&year2=' +  yearEnd + '&'\n",
+    "    plotSpecs2 = 'itypea=0&y1=&y2=&plotstyle=0&length=&lag=&iall=0&iseas=0&mon1=0&mon2=11&anom=0&climo1_yr1=&climo1_yr2=&climo2_yr1=&climo2_yr2=&Submit=Calculate+Results'\n",
     "\n",
+    "    plottingUrl = plottingUrlBase + plotSpecs1 + timeRange + plotSpecs2\n",
     "\n",
+    "    # access this plotting url, and then look for text that says \"Data file\", and then extract the url for the data file\n",
+    "    response = requests.get(plottingUrl)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    data_url = soup.find('a', string='Data file')['href']\n",
     "\n",
-    "pmm.to_csv(data_dir / 'pmm.csv', index=False)"
+    "    # download the data\n",
+    "    response = requests.get('https://psl.noaa.gov/'+data_url)\n",
+    "    data = response.text\n",
+    "\n",
+    "    data_io = io.StringIO(data)\n",
+    "    pmm = pd.read_csv(data_io, sep='\\s+', header=None, names=[\"time\", \"PMM\"])\n",
+    "\n",
+    "    # remove rows with missing values\n",
+    "    pmm = pmm.dropna()\n",
+    "\n",
+    "    # Apply the conversion function to the 'Date' column\n",
+    "    pmm['time'] = pmm['time'].apply(convert_fraction_to_date)\n",
+    "\n",
+    "    # put this time as closest to first day of the month\n",
+    "    pmm['time'] = pmm['time'] + pd.DateOffset(days=15)\n",
+    "    pmm['time'] = pmm['time'].dt.to_period('M').dt.to_timestamp()\n",
+    "\n",
+    "    # save to the data directory without the index\n",
+    "    pmm.to_csv(data_dir / 'pmm.csv', index=False)\n",
+    "    print('PMM data retrieved and saved to data directory')\n",
+    "    return pmm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PDO: Pacific Decadal Oscillation\n",
+    "\n",
+    "Monthly SST anomalies in the North Pacific Ocean. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_pdo_ncei(data_dir=data_dir):\n",
+    "    url = 'https://www.ncei.noaa.gov/pub/data/cmb/ersst/v5/index/ersst.v5.pdo.dat'\n",
+    "    response = requests.get(url)\n",
+    "    data = response.text\n",
+    "    data_io = io.StringIO(data)\n",
+    "    PDO = read_psl_format(data_io, 'PDO')\n",
+    "    PDO.to_csv(data_dir / 'pdo.csv', index=False)\n",
+    "    print('PDO data retrieved and saved to data directory')\n",
+    "\n",
+    "    return PDO\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BEST: Bivariate EnSo Timeseries \n",
+    "\n",
+    "This climate index combines the atmospheric component of ENSO (SOI) with the oceanic component (Nino 3.4 SST). \n",
+    "\n",
+    "For more info, see: https://psl.noaa.gov/people/cathy.smith/best/details.html\n",
+    "Smith, C.A. and P. Sardeshmukh, 2000, The Effect of ENSO on the Intraseasonal Variance of Surface Temperature in Winter., International J. of Climatology, 20 1543-1557."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_climateIndex(ClimateIndex, data_dir=data_dir):\n",
+    "    PSLurlBase = 'https://psl.noaa.gov/data/'\n",
+    "\n",
+    "    # Define the URL based on the ClimateIndex\n",
+    "    if ClimateIndex in ['TNA', 'ONI','PNA']:\n",
+    "        url = PSLurlBase + 'correlation/' + ClimateIndex.lower() + '.data'\n",
+    "    \n",
+    "    elif ClimateIndex in ['AAO']:\n",
+    "        url = PSLurlBase + 'timeseries/month/data/' + ClimateIndex.lower() + '.data'\n",
+    "\n",
+    "    elif ClimateIndex == 'AO':\n",
+    "        url = PSLurlBase + 'timeseries/month/data/' + ClimateIndex.lower() + '.long.data'\n",
+    "\n",
+    "    elif ClimateIndex == 'DMI':\n",
+    "        url = 'https://psl.noaa.gov/gcos_wgsp/Timeseries/Data/dmieast.had.long.data'\n",
+    "\n",
+    "    elif ClimateIndex == 'BEST':\n",
+    "        url = PSLurlBase + 'correlation/censo.data'\n",
+    "    \n",
+    "    elif ClimateIndex == 'PDO':\n",
+    "        url = 'https://psl.noaa.gov/pdo/data/pdo.timeseries.sstens.data'\n",
+    "\n",
+    "    else:\n",
+    "        raise ValueError(f\"ClimateIndex '{ClimateIndex}' is not recognized\")\n",
+    "    \n",
+    "    print(f\"Retrieving data from: {url}\")\n",
+    "\n",
+    "    # Fetch and format the data\n",
+    "    data_io = read_psl_url(url)\n",
+    "    climate_data = read_psl_format(data_io, ClimateIndex)\n",
+    "\n",
+    "    # Save the data to a CSV file\n",
+    "    output_file = data_dir / (ClimateIndex.lower() + '.csv')\n",
+    "    climate_data.to_csv(output_file, index=False)\n",
+    "    print(f\"{ClimateIndex} data retrieved and saved to {output_file}\")\n",
+    "\n",
+    "    return climate_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PMM data retrieved and saved to data directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "ONI = retrieve_climateIndex('ONI')\n",
+    "TNA = retrieve_climateIndex('TNA')\n",
+    "PNA = retrieve_climateIndex('PNA')\n",
+    "AAO = retrieve_climateIndex('AAO')\n",
+    "AO = retrieve_climateIndex('AO')\n",
+    "DMI = retrieve_climateIndex('DMI')\n",
+    "BEST = retrieve_climateIndex('BEST')\n",
+    "PMM = retrieve_pmm()\n",
+    "PDO = retrieve_climateIndex('PDO')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of all DataFrames and their corresponding names\n",
+    "CIs = {\n",
+    "    'BEST': BEST,\n",
+    "    'DMI': DMI,\n",
+    "    'AO': AO,\n",
+    "    'AAO': AAO,\n",
+    "    'PNA': PNA,\n",
+    "    'TNA': TNA,\n",
+    "    'ONI': ONI,\n",
+    "    'PDO': PDO,\n",
+    "    'PMM': PMM\n",
+    "}\n",
+    "\n",
+    "# Start with the first DataFrame (BEST in this case)\n",
+    "merged_CI = CIs['BEST']\n",
+    "\n",
+    "# Loop through the rest of the DataFrames and merge them on 'time'\n",
+    "for name, df in CIs.items():\n",
+    "    if name != 'BEST':\n",
+    "        merged_CI = pd.merge(merged_CI, df, on='time', how='outer')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# truncate to 1993 through 2023\n",
+    "merged_CI = merged_CI[(merged_CI['time'] >= '1993-01-01') & (merged_CI['time'] <= '2023-12-31')]\n",
+    "merged_CI.to_csv(data_dir / 'climate_indices.csv', index=False)\n"
    ]
   },
   {
