add nodal in before testing climate covariates

--- a/notebooks/nonstationaryGEV/monthly_extremes_non-stationaryGEV.ipynb
+++ b/notebooks/nonstationaryGEV/monthly_extremes_non-stationaryGEV.ipynb
@@ -229,7 +229,7 @@
     "\n",
     "\\begin{align}\n",
     "\\mu(t) &= \\beta_0 e^{\\beta_{LT}(t)} + \\beta_1 cos(2\\pi t) + \\beta_2 sin(2\\pi t) + \\beta_3 cos(4\\pi t) + \\beta_4 sin(4\\pi t) \\\\\n",
-    "&+ \\beta_5 cos(8\\pi t) + \\beta_6 sin(8\\pi t) + \\beta_{PMM}PMM(t) + \\beta_{N_1} cos(2\\pi t/T_N),\\\\\n",
+    "&+ \\beta_5 cos(8\\pi t) + \\beta_6 sin(8\\pi t) + \\beta_{PMM}PMM(t) + \\beta_{N_1} cos(2\\pi t/T_N) + \\beta_{N_2} sin(2\\pi t/T_N),\\\\\n",
     "\\psi &= \\alpha_0 + \\alpha_{PMM}PMM(t), \\\\\n",
     "\\xi &=  \\gamma_0 \n",
     "\\end{align}\n",
