--- a/notebooks/contributions.ipynb
+++ b/notebooks/contributions.ipynb
@@ -18,8 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "tags": [
+     "hide input"
+    ]
+   },
    "outputs": [],
    "source": [
     "%run setup.ipynb\n",
@@ -40,8 +44,8 @@
     "# set up directories to read from\n",
     "dirs = make_directoryDict(base_dir)\n",
     "\n",
-    "from matplotlib.lines import Line2D\n",
-    "import matplotlib as mpl"
+    "from matplotlib import colors\n",
+    "from matplotlib.lines import Line2D\n"
    ]
   },
   {
@@ -476,7 +480,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Make figure\n",
@@ -562,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +585,12 @@
     }
    ],
    "source": [
-    "fig, amps, ax = make_component_figure(w, modelInfo, model, time)"
+    "fig, amps, ax = make_component_figure(w, modelInfo, model, time)\n",
+    "\n",
+    "#save the figure\n",
+    "savename = 'LocationComponents_' + model.attrs['station_name'] + '.png'\n",
+    "filename = Path(dirs['output_dir']) / savename\n",
+    "fig.savefig(filename, bbox_inches='tight')"
    ]
   },
   {
@@ -654,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +705,11 @@
     "plt.legend(title='Component', loc='upper left', bbox_to_anchor=(1, 1))\n",
     "\n",
     "# replace the x-axis with the station names\n",
-    "plt.yticks(np.arange(len(df.index)), df['Station Name']);\n"
+    "plt.yticks(np.arange(len(df.index)), df['Station Name']);\n",
+    "\n",
+    "# save the plot\n",
+    "savename = Path(dirs['output_dir']) / 'location_param_component_amps.png'\n",
+    "plt.savefig(savename, bbox_inches='tight')\n"
    ]
   },
   {
@@ -927,18 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from matplotlib.lines import Line2D\n",
-    "from matplotlib import colors\n",
-    "import cartopy.crs as ccrs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1015,8 +1021,9 @@
     "                        for size, label in zip(sizes, size_labels)]\n",
     "ax.legend(handles=size_legend_elements, title=\"Amplitude Size\", loc=\"lower left\")\n",
     "\n",
-    "plt.show()\n",
-    "plt.close(fig)\n"
+    "# save the figure\n",
+    "savename = Path(dirs['output_dir']) / 'SL_contributions_map.png'\n",
+    "plt.savefig(savename, dpi=300, bbox_inches='tight')\n"
    ]
   }
  ],
